--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=sb-ecom
+
+#  h2 database ile proje ba?lant?s? için
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:test
+
+
+# run esnas?nda sql kodlar? görebilmek
+# spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.format_sql=true
+
+# her çal??t?r?lma a?amas?nda db güncellemesi ( create / update )
+# spring.jpa.hibernate.ddl-auto=update
