--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,4 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 # her çal??t?r?lma a?amas?nda db güncellemesi ( create / update )
-# spring.jpa.hibernate.ddl-auto=update
+ spring.jpa.hibernate.ddl-auto=update
